# rag-vizualisation

./: .env.prod.example  .gitignore  CONTRIBUTING.md  Caddyfile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: websocket.py
backend/app/api/routes/: documents.py  embeddings.py  projects.py  providers.py  query.py  stats.py
backend/app/core/: config.py  events.py  pipeline.py
backend/app/db/: database.py
backend/app/models/: schemas.py
backend/app/processing/: chunker.py  codebase_parser.py  embedder.py  parser.py
backend/app/providers/: manager.py
backend/app/providers/embedding/: base.py  cohere_embed.py  ollama_embed.py  openai_embed.py
backend/app/providers/llm/: anthropic_llm.py  base.py  ollama_llm.py  openai_llm.py
backend/app/providers/vectordb/: base.py  chroma_db.py  pgvector_db.py  qdrant_db.py
backend/tests/: test_api_documents.py  test_api_embeddings.py  test_api_providers.py  test_api_query.py  test_api_stats.py  test_chunker.py  test_config.py  test_database.py  test_embedder.py  test_embedding_providers.py  test_events.py  test_integration.py  test_llm_providers.py  test_parser.py  test_pipeline.py  test_provider_manager.py  test_schemas.py  test_vectordb_providers.py  test_websocket.py
docs/: deploy-vps.md
frontend/: Dockerfile  components.json  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  (+5 more)
(+75 files in other folders)
