[project]
name = "rag-vizualisation-backend"
version = "0.1.0"
description = "Backend for RAG Pipeline Visualization"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# pycodestyle (E), pyflakes (F), isort (I), pyupgrade (UP), flake8-bugbear (B)
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",   # line length handled by the formatter
    "UP042",  # keep (str, Enum) — StrEnum changes str() output and would alter serialization
]
